done some changes,dont remember specifics

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 
     <div id="wrapper">
         <div id="snaptarget" class="main-timeline">
-        </div>
-
-        <div id="snaptarget" class="main-timeline">
+            <div class="sample-slot"></div>
+            <div class="sample-slot"></div>
+            <div class="sample-slot"></div>
+            <div class="sample-slot"></div>
+            <div class="sample-slot"></div>
+            <div class="sample-slot"></div>
         </div>
 
         <ul id="sample-list">
