funkar lite bättre

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
     <div id="wrapper">
         <div id="snaptarget" class="main-timeline">
-            <div class="sample-slot"></div>
-            <div class="sample-slot"></div>
-            <div class="sample-slot"></div>
-            <div class="sample-slot"></div>
-            <div class="sample-slot"></div>
-            <div class="sample-slot"></div>
+            <h3>Playlist channels:</h3>
+            <div id="slot1" class="sample-slot"></div>
+            <div id="slot2" class="sample-slot"></div>
+            <div id="slot3" class="sample-slot"></div>
+            <div id="slot4" class="sample-slot"></div>
+            <div id="slot5" class="sample-slot"></div>
+            <div id="slot6" class="sample-slot"></div>
         </div>
 
         <ul id="sample-list">
@@ -26,6 +27,10 @@
             <li class="audiosample" sampleFile="Synth Chords.wav">Synth Chords.wav</li>
             <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
         </ul>
+
+        <div id="inactive-samples">
+            <h3>Your dragged out samples:</h3>
+        </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
