--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
             <h3>Playlist channels:</h3>
             <div id="slot1" class="sample-slot"></div>
             <div id="slot2" class="sample-slot"></div>
-            <div id="slot3" class="sample-slot"></div>
-            <div id="slot4" class="sample-slot"></div>
-            <div id="slot5" class="sample-slot"></div>
-            <div id="slot6" class="sample-slot"></div>
+            
+            <button id="remove-sample" class="add-remove">Remove last sample!</button>
+            <button id="add-sample" class="add-remove">Add new sample slot!</button>
         </div>
 
         <ul id="sample-list">
