--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1 id="header">DJ Wannabe</h1>
 
     <div id="wrapper">
+        <button id="play-all-button">Play all samples!</button>
         <div id="snaptarget" class="main-timeline">
             <h3>Playlist channels:</h3>
             <div id="slot1" class="sample-slot"></div>
