--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <button id="add-sample" class="add-remove">Add new sample slot!</button>
         </div>
 
+        <!--<div id="snaptarget1" class="main-timeline">
+            <div id="0" class="sample-slot"></div>
+            <div id="1" class="sample-slot"></div>
+        </div>-->
+
         <ul id="sample-list">
             <h3>Sample List</h3>
             <li class="audiosample" sampleFile="Lead Melody.wav">Lead Melody.wav</li>
@@ -35,7 +40,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.3/howler.js"></script>
     <script src="bundle.js"></script>
 
 </body>
