Can play samples in correct order and in sequence from the channel playlist array.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <button id="play-all-button">Play all samples!</button>
         <div id="snaptarget" class="main-timeline">
             <h3>Playlist channels:</h3>
-            <div id="slot1" class="sample-slot"></div>
-            <div id="slot2" class="sample-slot"></div>
-            
+            <div id="slot0" class="sample-slot" helper="0"></div>
+            <div id="slot1" class="sample-slot" helper="1"></div>
+            <div id="slot2" class="sample-slot" helper="2"></div>
+
             <button id="remove-sample" class="add-remove">Remove last sample!</button>
             <button id="add-sample" class="add-remove">Add new sample slot!</button>
         </div>
