--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <div id="slot0" class="sample-slot" helper="0"></div>
             <div id="slot1" class="sample-slot" helper="1"></div>
             <div id="slot2" class="sample-slot" helper="2"></div>
-
+            <div id="slot3" class="sample-slot" helper="3"></div>
+            
             <button id="remove-sample" class="add-remove">Remove last sample!</button>
             <button id="add-sample" class="add-remove">Add new sample slot!</button>
         </div>
@@ -27,7 +28,7 @@
         </div>-->
 
         <ul id="sample-list">
-            <h3>Sample List</h3>
+            <h3>Sample Library</h3>
             <li class="audiosample" sampleFile="Lead Melody.wav">Lead Melody.wav</li>
             <li class="audiosample" sampleFile="Piano Chords.wav">Piano Chords.wav</li>
             <li class="audiosample" sampleFile="Synth Chords.wav">Synth Chords.wav</li>
