--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>DJ Wannabe</title>
 </head>
 <body>
-<h1 id="header">DJ Wannabe</h1>
+    
+<h1 id="header"><img src="images/turntable_icon.png">DJ Wannabe</h1>
 
     <div id="wrapper">
         <button id="play-all-button">Play all samples!</button>
