can play 2 channels in sequence at the same time

--- a/index.html
+++ b/index.html
@@ -14,25 +14,28 @@
         <button id="play-all-button">Play all samples!</button>
         <div id="snaptarget" class="main-timeline">
             <h3>Playlist channels:</h3>
-            <div id="slot0" class="sample-slot" helper="0"></div>
-            <div id="slot1" class="sample-slot" helper="1"></div>
-            <div id="slot2" class="sample-slot" helper="2"></div>
-            <div id="slot3" class="sample-slot" helper="3"></div>
+            <h4>Channel 1:</h4>
+            <div id="channel1Slot0" class="sample-slot" helper="0"></div>
+            <div id="channel1Slot1" class="sample-slot" helper="1"></div>
+            <div id="channel1Slot2" class="sample-slot" helper="2"></div>
+            <div id="channel1Slot3" class="sample-slot" helper="3"></div>
             
             <button id="remove-sample" class="add-remove">Remove last sample!</button>
             <button id="add-sample" class="add-remove">Add new sample slot!</button>
         </div>
 
-        <!--<div id="snaptarget1" class="main-timeline">
-            <div id="0" class="sample-slot"></div>
-            <div id="1" class="sample-slot"></div>
-        </div>-->
+        <div id="snaptarget1" class="main-timeline">
+            <div id="channel2Slot0" class="sample-slot" helper="0"></div>
+            <div id="channel2Slot1" class="sample-slot" helper="1"></div>
+            <div id="channel2Slot2" class="sample-slot" helper="2"></div>
+            <div id="channel2Slot3" class="sample-slot" helper="3"></div>
+        </div>
 
         <ul id="sample-list">
             <h3>Sample Library</h3>
-            <li class="audiosample" sampleFile="Lead Melody.wav">Lead Melody.wav</li>
-            <li class="audiosample" sampleFile="Piano Chords.wav">Piano Chords.wav</li>
-            <li class="audiosample" sampleFile="Synth Chords.wav">Synth Chords.wav</li>
+            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
+            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
+            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
             <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
         </ul>
 
