--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <button id="play-all-button">Play all samples!</button>
         <div id="snaptarget" class="main-timeline">
             <h3>Playlist channels:</h3>
-            <h4>Channel 1:</h4>
+            <h4>Channel 1</h4>
             <div id="channel1Slot0" class="sample-slot" helper="0"></div>
             <div id="channel1Slot1" class="sample-slot" helper="1"></div>
             <div id="channel1Slot2" class="sample-slot" helper="2"></div>
@@ -25,6 +25,7 @@
         </div>
 
         <div id="snaptarget1" class="main-timeline">
+            <h4>Channel 2</h4>
             <div id="channel2Slot0" class="sample-slot" helper="0"></div>
             <div id="channel2Slot1" class="sample-slot" helper="1"></div>
             <div id="channel2Slot2" class="sample-slot" helper="2"></div>
