HTML + CSS, yee

--- a/index.html
+++ b/index.html
@@ -11,29 +11,63 @@
 <h1 id="header"><img src="images/turntable_icon.png">DJ Wannabe</h1>
 
     <div id="wrapper">
-        <button id="play-all-button">Play all samples!</button>
-        <div id="snaptarget" class="main-timeline">
-            <h3>Playlist channels:</h3>
-            <h4>Channel 1</h4>
-            <div id="channel1Slot0" class="sample-slot" helper="0"></div>
-            <div id="channel1Slot1" class="sample-slot" helper="1"></div>
-            <div id="channel1Slot2" class="sample-slot" helper="2"></div>
-            <div id="channel1Slot3" class="sample-slot" helper="3"></div>
-            
-            <button id="remove-sample" class="add-remove">Remove last sample!</button>
-            <button id="add-sample" class="add-remove">Add new sample slot!</button>
-        </div>
+        <button id="play-all-button">Play all samples!</button> 
+            <div id="playlist-container">
 
-        <div id="snaptarget1" class="main-timeline">
-            <h4>Channel 2</h4>
-            <div id="channel2Slot0" class="sample-slot" helper="0"></div>
-            <div id="channel2Slot1" class="sample-slot" helper="1"></div>
-            <div id="channel2Slot2" class="sample-slot" helper="2"></div>
-            <div id="channel2Slot3" class="sample-slot" helper="3"></div>
-        </div>
+                <div id="snaptarget" class="main-timeline">
+                    <!--<h3>Playlist channels:</h3>
+                    <h4>Channel 1</h4>-->
+                    <div id="channel1Slot0" class="sample-slot" helper="0"></div>
+                    <div id="channel1Slot1" class="sample-slot" helper="1"></div>
+                    <div id="channel1Slot2" class="sample-slot" helper="2"></div>
+                    <div id="channel1Slot3" class="sample-slot" helper="3"></div>
+                    <div id="channel1Slot4" class="sample-slot" helper="4"></div>
+                    <div id="channel1Slot5" class="sample-slot" helper="5"></div>
+                    <div id="channel1Slot6" class="sample-slot" helper="6"></div>
+                    <div id="channel1Slot7" class="sample-slot" helper="7"></div>
+                    
+                    <!--<button id="remove-sample" class="add-remove">Remove last sample!</button>
+                    <button id="add-sample" class="add-remove">Add new sample slot!</button>-->
+                </div>
 
+                <div id="snaptarget1" class="main-timeline">
+                    <!--<h4>Channel 2</h4>-->
+                    <div id="channel2Slot0" class="sample-slot" helper="0"></div>
+                    <div id="channel2Slot1" class="sample-slot" helper="1"></div>
+                    <div id="channel2Slot2" class="sample-slot" helper="2"></div>
+                    <div id="channel2Slot3" class="sample-slot" helper="3"></div>
+                    <div id="channel2Slot4" class="sample-slot" helper="4"></div>
+                    <div id="channel2Slot5" class="sample-slot" helper="5"></div>
+                    <div id="channel2Slot6" class="sample-slot" helper="6"></div>
+                    <div id="channel2Slot7" class="sample-slot" helper="7"></div>
+                </div>
+            </div>
         <ul id="sample-list">
             <h3>Sample Library</h3>
+            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
+            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
+            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
+            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
+            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
+            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
+            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
+            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
+            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
+            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
+            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
+            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
+            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
+            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
+            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
+            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
+            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
+            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
+            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
+            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
+            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
+            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
+            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
+            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
             <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
             <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
             <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
