--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8">
     <title>DJ Wannabe</title>
 </head>
@@ -11,9 +12,7 @@
 <h1 id="header"><img src="images/turntable_icon.png">DJ Wannabe</h1>
 
     <div id="wrapper">
-        <button id="play-all-button">Play all samples!</button> 
             <div id="playlist-container">
-
                 <div id="snaptarget" class="main-timeline">
                     <!--<h3>Playlist channels:</h3>
                     <h4>Channel 1</h4>-->
@@ -42,37 +41,16 @@
                     <div id="channel2Slot7" class="sample-slot" helper="7"></div>
                 </div>
             </div>
+
         <ul id="sample-list">
             <h3>Sample Library</h3>
             <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
             <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
             <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
             <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
-            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
-            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
-            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
-            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
-            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
-            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
-            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
-            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
-            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
-            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
-            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
-            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
-            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
-            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
-            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
-            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
-            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
-            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
-            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
-            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
-            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
-            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
-            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
-            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
         </ul>
+
+        <i id="play-all-button" class="fa fa-play" aria-hidden="true"></i>
 
         <div id="inactive-samples">
             <h3>Your dragged out samples:</h3>
