Added one more channel and new samples

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <div id="wrapper">
             <div id="playlist-container">
                 <div id="snaptarget" class="main-timeline">
-                    <!--<h3>Playlist channels:</h3>
-                    <h4>Channel 1</h4>-->
+                    <h3>1</h3>
                     <div id="channel1Slot0" class="sample-slot" helper="0"></div>
                     <div id="channel1Slot1" class="sample-slot" helper="1"></div>
                     <div id="channel1Slot2" class="sample-slot" helper="2"></div>
@@ -30,7 +29,7 @@
                 </div>
 
                 <div id="snaptarget1" class="main-timeline">
-                    <!--<h4>Channel 2</h4>-->
+                    <h3>2</h3>
                     <div id="channel2Slot0" class="sample-slot" helper="0"></div>
                     <div id="channel2Slot1" class="sample-slot" helper="1"></div>
                     <div id="channel2Slot2" class="sample-slot" helper="2"></div>
@@ -40,14 +39,29 @@
                     <div id="channel2Slot6" class="sample-slot" helper="6"></div>
                     <div id="channel2Slot7" class="sample-slot" helper="7"></div>
                 </div>
+
+                <div id="snaptarget2" class="main-timeline">
+                    <h3>3</h3>
+                    <div id="channel3Slot0" class="sample-slot" helper="0"></div>
+                    <div id="channel3Slot1" class="sample-slot" helper="1"></div>
+                    <div id="channel3Slot2" class="sample-slot" helper="2"></div>
+                    <div id="channel3Slot3" class="sample-slot" helper="3"></div>
+                    <div id="channel3Slot4" class="sample-slot" helper="4"></div>
+                    <div id="channel3Slot5" class="sample-slot" helper="5"></div>
+                    <div id="channel3Slot6" class="sample-slot" helper="6"></div>
+                    <div id="channel3Slot7" class="sample-slot" helper="7"></div>
+                </div>
             </div>
 
         <ul id="sample-list">
             <h3>Sample Library</h3>
-            <li class="audiosample" sampleFile="Lead Melody.ogg">Lead Melody.ogg</li>
-            <li class="audiosample" sampleFile="Piano Chords.ogg">Piano Chords.ogg</li>
-            <li class="audiosample" sampleFile="Synth Chords.ogg">Synth Chords.ogg</li>
-            <li class="audiosample" sampleFile="Weird Synth.wav">Weird Synth.wav</li>
+            <li class="audiosample" sampleFile="HIMITSU Big Synth Chord.ogg">HIMITSU Big Synth Chord.ogg</li>
+            <li class="audiosample" sampleFile="HIMITSU Soft Piano.ogg">HIMITSU Soft Piano.ogg</li>
+            <li class="audiosample" sampleFile="HIMITSU Soft Synth.ogg">HIMITSU Soft Synth.ogg</li>
+            <li class="audiosample" sampleFile="HIMITSU Piano Low.ogg">HIMITSU Piano Low.ogg</li>
+            <li class="audiosample" sampleFile="HIMITSU Drum Beat.ogg">HIMITSU Drum Beat.ogg</li>
+            <li class="audiosample" sampleFile="HIMITSU Cute Vocals.ogg">HIMITSU Cute Vocals.ogg</li>
+            <li class="audiosample" sampleFile="HIMITSU Main Melody.ogg">HIMITSU Main Melody.ogg</li>
         </ul>
 
         <i id="play-all-button" class="fa fa-play" aria-hidden="true"></i>
