volume knob implemented

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <h1 id="header"><img src="images/turntable_icon.png">DJ Wannabe</h1>
 
     <div id="wrapper">
+        <input id="volumeKnob" type="range">
             <div id="playlist-container">
                 <div id="snaptarget" class="main-timeline">
                     <h3>1</h3>
