--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <h1 id="header"><img src="images/turntable_icon.png">DJ Wannabe</h1>
 
     <div id="wrapper">
-        <input id="volumeKnob" type="range">
+        <input id="volumeKnob" type="range" value="100">
+        <input id="delayKnob" type="range" value="100">
             <div id="playlist-container">
                 <div id="snaptarget" class="main-timeline">
                     <h3>1</h3>
