--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="shortcut icon" href="favicon.ico">
     <meta charset="UTF-8">
     <title>DJ Wannabe</title>
 </head>
@@ -54,7 +55,7 @@
                     <div id="channel3Slot7" class="sample-slot" helper="7"></div>
                 </div>
             </div>
-
+            
         <ul id="sample-list">
             <h3>Sample Library</h3>
             <li class="audiosample" sampleFile="HIMITSU Big Synth Chord.ogg">HIMITSU Big Synth Chord.ogg</li>
@@ -67,6 +68,7 @@
         </ul>
 
         <i id="play-all-button" class="fa fa-play" aria-hidden="true"></i>
+        <i id="garbageCan" class="fa fa-trash" aria-hidden="true"></i>
 
         <div id="inactive-samples">
             <h3>Your dragged out samples:</h3>
