--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div id="wrapper">
         <input id="volumeKnob" type="range" value="100">
-        <input id="delayKnob" type="range" value="100">
+        <!--<input id="delayKnob" type="range" value="100">-->
             <div id="playlist-container">
                 <div id="snaptarget" class="main-timeline">
                     <h3>1</h3>
@@ -55,7 +55,7 @@
                     <div id="channel3Slot7" class="sample-slot" helper="7"></div>
                 </div>
             </div>
-            
+
         <ul id="sample-list">
             <h3>Sample Library</h3>
             <li class="audiosample" sampleFile="HIMITSU Big Synth Chord.ogg">HIMITSU Big Synth Chord.ogg</li>
