Pics, design, 4th channel.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,21 @@
                         <input id="channel-checkbox3" name="3" type="checkbox">
                     </div>
                 </div>
+
+                <div id="snaptarget3" class="main-timeline">
+                    <h3>4</h3>
+                    <div id="channel4Slot0" class="sample-slot" helper="0"></div>
+                    <div id="channel4Slot1" class="sample-slot" helper="1"></div>
+                    <div id="channel4Slot2" class="sample-slot" helper="2"></div>
+                    <div id="channel4Slot3" class="sample-slot" helper="3"></div>
+                    <div id="channel4Slot4" class="sample-slot" helper="4"></div>
+                    <div id="channel4Slot5" class="sample-slot" helper="5"></div>
+                    <div id="channel4Slot6" class="sample-slot" helper="6"></div>
+                    <div id="channel4Slot7" class="sample-slot" helper="7"></div>
+                    <div class="channel-knobs">
+                        <input id="channel-checkbox4" name="4" type="checkbox">
+                    </div>
+                </div>
             </div>
 
         <ul id="sample-list">
@@ -81,8 +96,8 @@
             <li class="audiosample" sampleFile="HIMITSU Main Melody.ogg">HIMITSU Main Melody.ogg</li>
         </ul>
         <i id="garbageCan" class="fa fa-trash" aria-hidden="true"></i>
+        
         <div id="inactive-samples">
-            <h3>Your dragged out samples</h3>
         </div>
 
         <div class="push"></div>
