Can mute specific channels with checkbox.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <!--<button id="remove-sample" class="add-remove">Remove last sample!</button>
                     <button id="add-sample" class="add-remove">Add new sample slot!</button>-->
                     <div class="channel-knobs">
-                        <input id="channel-checkbox1" name="1" type="checkbox">
+                        <input id="1" name="checkName" type="checkbox">
                     </div>
                 </div>
 
@@ -50,7 +50,7 @@
                     <div id="channel2Slot6" class="sample-slot" helper="6"></div>
                     <div id="channel2Slot7" class="sample-slot" helper="7"></div>
                     <div class="channel-knobs">
-                        <input id="channel-checkbox2" name="2" type="checkbox">
+                        <input id="2" name="checkName" type="checkbox">
                     </div>
                 </div>
 
@@ -65,7 +65,7 @@
                     <div id="channel3Slot6" class="sample-slot" helper="6"></div>
                     <div id="channel3Slot7" class="sample-slot" helper="7"></div>
                     <div class="channel-knobs">
-                        <input id="channel-checkbox3" name="3" type="checkbox">
+                        <input id="3" name="checkName" type="checkbox">
                     </div>
                 </div>
 
@@ -80,7 +80,7 @@
                     <div id="channel4Slot6" class="sample-slot" helper="6"></div>
                     <div id="channel4Slot7" class="sample-slot" helper="7"></div>
                     <div class="channel-knobs">
-                        <input id="channel-checkbox4" name="4" type="checkbox">
+                        <input id="4" name="checkName" type="checkbox">
                     </div>
                 </div>
             </div>
