list of samples works better.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <button id="add-sample" class="add-remove">Add new sample slot!</button>-->
                     <div class="channel-knobs">
                         <input id="1" name="checkName" type="checkbox">
+                        <p>Mute</p>
                     </div>
                 </div>
 
@@ -51,6 +52,7 @@
                     <div id="channel2Slot7" class="sample-slot" helper="7"></div>
                     <div class="channel-knobs">
                         <input id="2" name="checkName" type="checkbox">
+                        <p>Mute</p>
                     </div>
                 </div>
 
@@ -66,6 +68,7 @@
                     <div id="channel3Slot7" class="sample-slot" helper="7"></div>
                     <div class="channel-knobs">
                         <input id="3" name="checkName" type="checkbox">
+                        <p>Mute</p>
                     </div>
                 </div>
 
@@ -81,6 +84,7 @@
                     <div id="channel4Slot7" class="sample-slot" helper="7"></div>
                     <div class="channel-knobs">
                         <input id="4" name="checkName" type="checkbox">
+                        <p>Mute</p>
                     </div>
                 </div>
             </div>
