--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                         <p>Mute</p>
                     </div>
                 </div>
-
                 <div id="snaptarget1" class="main-timeline">
                     <h3>2</h3>
+                    
                     <div id="channel2Slot0" class="sample-slot" helper="0"></div>
                     <div id="channel2Slot1" class="sample-slot" helper="1"></div>
                     <div id="channel2Slot2" class="sample-slot" helper="2"></div>
@@ -88,6 +88,12 @@
                     </div>
                 </div>
             </div>
+        <button id="button1" value="2">3</button>
+        <button id="button2" value="3">4</button>
+        <button id="button3" value="4">5</button>
+        <button id="button4" value="5">6</button>
+        <button id="button5" value="6">7</button>
+        <button id="button6" value="7">8</button>
 
         <ul id="sample-list">
             <h3>Sample Library</h3>
