refactoring small things

--- a/index.html
+++ b/index.html
@@ -88,12 +88,13 @@
                     </div>
                 </div>
             </div>
-        <button id="button1" value="2">3</button>
-        <button id="button2" value="3">4</button>
-        <button id="button3" value="4">5</button>
-        <button id="button4" value="5">6</button>
-        <button id="button5" value="6">7</button>
-        <button id="button6" value="7">8</button>
+        <button id="button0" value="1" disabled="" class="BTN">2</button>
+        <button id="button1" value="2" disabled="" class="BTN">3</button>
+        <button id="button2" value="3" disabled="" class="BTN">4</button>
+        <button id="button3" value="4" disabled="" class="BTN">5</button>
+        <button id="button4" value="5" disabled="" class="BTN">6</button>
+        <button id="button5" value="6" disabled="" class="BTN">7</button>
+        <button id="button6" value="7" disabled="" class="BTN">8</button>
 
         <ul id="sample-list">
             <h3>Sample Library</h3>
