sample-slots are not stackable, dropdown playback option implemented.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
         <div id="project-controller">
             <i id="play-all-button" class="fa fa-play" aria-hidden="true"></i>
             <i id="stop-all-button" class="fa fa-stop" aria-hidden="true"></i>
+
+            <select id="starting-point" disabled="">
+                <option selected="selected">-</option>
+                <option id="button1" value="1">2</option>
+                <option id="button2" value="2">3</option>
+                <option id="button3" value="3">4</option>
+                <option id="button4" value="4">5</option>
+                <option id="button5" value="5">6</option>
+                <option id="button6" value="6">7</option>
+                <option id="button7" value="7">8</option>
+            </select>
             <i id="volume-icon-down" class="fa fa-volume-down" aria-hidden="true"></i>
             <input id="volumeKnob" type="range" value="100">
             <i id="volume-icon-up" class="fa fa-volume-up" aria-hidden="true"></i>
@@ -88,13 +99,13 @@
                     </div>
                 </div>
             </div>
-        <button id="button0" value="1" disabled="" class="BTN">2</button>
+        <!--<button id="button0" value="1" disabled="" class="BTN">2</button>
         <button id="button1" value="2" disabled="" class="BTN">3</button>
         <button id="button2" value="3" disabled="" class="BTN">4</button>
         <button id="button3" value="4" disabled="" class="BTN">5</button>
         <button id="button4" value="5" disabled="" class="BTN">6</button>
         <button id="button5" value="6" disabled="" class="BTN">7</button>
-        <button id="button6" value="7" disabled="" class="BTN">8</button>
+        <button id="button6" value="7" disabled="" class="BTN">8</button>-->
 
         <ul id="sample-list">
             <h3>Sample Library</h3>
