--- a/index.html
+++ b/index.html
@@ -99,16 +99,8 @@
                     </div>
                 </div>
             </div>
-        <!--<button id="button0" value="1" disabled="" class="BTN">2</button>
-        <button id="button1" value="2" disabled="" class="BTN">3</button>
-        <button id="button2" value="3" disabled="" class="BTN">4</button>
-        <button id="button3" value="4" disabled="" class="BTN">5</button>
-        <button id="button4" value="5" disabled="" class="BTN">6</button>
-        <button id="button5" value="6" disabled="" class="BTN">7</button>
-        <button id="button6" value="7" disabled="" class="BTN">8</button>-->
-
         <ul id="sample-list">
-            <h3>Sample Library</h3>
+            <h3 id="library-h3">Sample Library</h3>
             <li class="audiosample" sampleFile="HIMITSU Big Synth Chord.ogg">HIMITSU Big Synth Chord.ogg</li>
             <li class="audiosample" sampleFile="HIMITSU Soft Piano.ogg">HIMITSU Soft Piano.ogg</li>
             <li class="audiosample" sampleFile="HIMITSU Soft Synth.ogg">HIMITSU Soft Synth.ogg</li>
@@ -119,8 +111,7 @@
         </ul>
         <i id="garbageCan" class="fa fa-trash" aria-hidden="true"></i>
         
-        <div id="inactive-samples">
-        </div>
+        <div id="inactive-samples"></div>
 
         <div class="push"></div>
     </div>
