Can record audio in real-time + download it as an .ogg file

--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
         
         <div id="inactive-samples"></div>
 
+        <p><button id="record">Record audio</button> <button id="stop" >Stop</button></p>
+        <!--<audio controls></audio>-->
+        <a id="audio-recorder"></a>
+
         <div class="push"></div>
     </div>
     <div class="footer">Credits</div>
