minor changes to record functionality

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <div id="project-controller">
             <i id="play-all-button" class="fa fa-play" aria-hidden="true"></i>
             <i id="stop-all-button" class="fa fa-stop" aria-hidden="true"></i>
+            <i id="record-button"class="fa fa-circle" aria-hidden="true"></i>
+
 
             <select id="starting-point" disabled="">
                 <option selected="selected">-</option>
@@ -113,7 +115,7 @@
         
         <div id="inactive-samples"></div>
 
-        <p><button id="record">Record audio</button> <button id="stop" >Stop</button></p>
+        <!--<p><button id="record">Record audio</button> <button id="stop" >Stop</button></p>-->
         <!--<audio controls></audio>-->
         <a id="audio-recorder"></a>
 
