added lowpass filter with frequency control + some refactoring

--- a/index.html
+++ b/index.html
@@ -55,33 +55,62 @@
         <div id="inactive-samples"></div>
 
         <div id="mixer-board">
-            <div id="route1" class="mixer-route">mix1
+            <div id="route1" class="mixer-route">
+                <div>
+                    <input id="mixVolume1" class="mixer-volume" type="range" value="100" orient="vertical">
+                </div>
+                <div>    
+                    <input id="lowpassFilter1" class="mixer-filter" type="range" value="0" orient="vertical">
+                </div>
+                1
                 <input id="1" name="checkName" type="checkbox">
-                <input id="knobTest" type="range" value="100" orient="vertical">
             </div>
-            <div id="route2" class="mixer-route">mix2
+            <div id="route2" class="mixer-route">
+                <div>
+                    <input id="mixVolume2" class="mixer-volume" type="range" value="100" orient="vertical">
+                </div>
+                <div>
+                    <input id="lowpassFilter2" class="mixer-filter" type="range" value="0" orient="vertical">
+                </div>
+                2
                 <input id="2" name="checkName" type="checkbox">
-                <input id="knobTest" type="range" value="100" orient="vertical">
             </div>
-            <div id="route3" class="mixer-route">mix3
+            <div id="route3" class="mixer-route">
+                <div>
+                    <input id="mixVolume3" class="mixer-volume" type="range" value="100" orient="vertical">
+                </div>
+                <div>
+                    <input id="lowpassFilter3" class="mixer-filter" type="range" value="0" orient="vertical">
+                </div>
+                3
                 <input id="3" name="checkName" type="checkbox">
-                <input id="knobTest" type="range" value="100" orient="vertical">
             </div>
-            <div id="route4" class="mixer-route">mix4
+            <div id="route4" class="mixer-route">
+                <div>
+                    <input id="mixVolume4" class="mixer-volume" type="range" value="100" orient="vertical">
+                </div>
+                <div>
+                    <input id="lowpassFilter4" class="mixer-filter" type="range" value="0" orient="vertical">
+                </div>
+                4
                 <input id="4" name="checkName" type="checkbox">
-                <input id="knobTest" type="range" value="100" orient="vertical">
             </div>
-            <div id="route5" class="mixer-route">mix5
+            <div id="route5" class="mixer-route">
+                <div>
+                    <input id="mixVolume5" class="mixer-volume" type="range" value="100" orient="vertical">
+                </div>
+                <div>
+                    <input id="lowpassFilter5" class="mixer-filter" type="range" value="0" orient="vertical">
+                </div>
+                5
                 <input id="5" name="checkName" type="checkbox">
-                <input id="knobTest" type="range" value="100" orient="vertical">
             </div>
         </div>
 
         <a id="audio-recorder"></a>
-        <div id='fileNames'></div>
-        <div class="push"></div>
+        <!--<div class="push"></div>-->
     </div>
-    <div class="footer">Credits</div>
+    <!--<div class="footer">Credits</div>-->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
